--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
+  height: 100vh;
+  width: 100%;
 }
 
 .logo {
